--- a/style.css
+++ b/style.css
@@ -390,7 +390,7 @@ body {
   padding-top: 102px;
   padding-left: 80px;
   padding-bottom: 30px;
-  background-image: url('../Hero.jpg');
+  background-image: url('Hero.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
